--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="Laser.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="Mouse.h" />
+    <ClInclude Include="PlayerSelect.h" />
     <ClInclude Include="RectF.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Square.h" />
@@ -176,6 +177,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="Mouse.cpp" />
+    <ClCompile Include="PlayerSelect.cpp" />
     <ClCompile Include="RectF.cpp" />
     <ClCompile Include="Square.cpp" />
     <ClCompile Include="Vec2.cpp" />
