--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="DXErr.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Graphics.h" />
+    <ClInclude Include="Jedi.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Laser.h" />
     <ClInclude Include="MainWindow.h" />
@@ -158,6 +159,7 @@
     <ClInclude Include="RectF.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Square.h" />
+    <ClInclude Include="Trooper.h" />
     <ClInclude Include="Vec2.h" />
   </ItemGroup>
   <ItemGroup>
@@ -172,6 +174,7 @@
     <ClCompile Include="DXErr.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Graphics.cpp" />
+    <ClCompile Include="Jedi.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Laser.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -180,6 +183,7 @@
     <ClCompile Include="PlayerSelect.cpp" />
     <ClCompile Include="RectF.cpp" />
     <ClCompile Include="Square.cpp" />
+    <ClCompile Include="Trooper.cpp" />
     <ClCompile Include="Vec2.cpp" />
   </ItemGroup>
   <ItemGroup>
