--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="PlayerSelect.h" />
     <ClInclude Include="RectF.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Saber.h" />
     <ClInclude Include="Square.h" />
     <ClInclude Include="Trooper.h" />
     <ClInclude Include="Vec2.h" />
@@ -182,6 +183,7 @@
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="PlayerSelect.cpp" />
     <ClCompile Include="RectF.cpp" />
+    <ClCompile Include="Saber.cpp" />
     <ClCompile Include="Square.cpp" />
     <ClCompile Include="Trooper.cpp" />
     <ClCompile Include="Vec2.cpp" />
