--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="Character.h">
       <Filter>objects</Filter>
     </ClInclude>
+    <ClInclude Include="Saber.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DXErr.cpp">
@@ -166,6 +169,9 @@
     </ClCompile>
     <ClCompile Include="Character.cpp">
       <Filter>objects</Filter>
+    </ClCompile>
+    <ClCompile Include="Saber.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
