started working on title screen

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -160,6 +160,8 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Saber.h" />
     <ClInclude Include="Square.h" />
+    <ClInclude Include="Title.h" />
+    <ClInclude Include="titleart.h" />
     <ClInclude Include="Trooper.h" />
     <ClInclude Include="Vec2.h" />
   </ItemGroup>
@@ -185,6 +187,8 @@
     <ClCompile Include="RectF.cpp" />
     <ClCompile Include="Saber.cpp" />
     <ClCompile Include="Square.cpp" />
+    <ClCompile Include="Title.cpp" />
+    <ClCompile Include="titleart.cpp" />
     <ClCompile Include="Trooper.cpp" />
     <ClCompile Include="Vec2.cpp" />
   </ItemGroup>
