--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -133,6 +133,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -149,6 +150,7 @@
     <ClInclude Include="Colors.h" />
     <ClInclude Include="DXErr.h" />
     <ClInclude Include="EndScrene.h" />
+    <ClInclude Include="FrameTimer.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="Jedi.h" />
@@ -160,6 +162,8 @@
     <ClInclude Include="RectF.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Saber.h" />
+    <ClInclude Include="Sound.h" />
+    <ClInclude Include="SoundEffect.h" />
     <ClInclude Include="Square.h" />
     <ClInclude Include="Stars.h" />
     <ClInclude Include="Title.h" />
@@ -178,6 +182,7 @@
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="DXErr.cpp" />
     <ClCompile Include="EndScrene.cpp" />
+    <ClCompile Include="FrameTimer.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="Jedi.cpp" />
@@ -189,6 +194,7 @@
     <ClCompile Include="PlayerSelect.cpp" />
     <ClCompile Include="RectF.cpp" />
     <ClCompile Include="Saber.cpp" />
+    <ClCompile Include="Sound.cpp" />
     <ClCompile Include="Square.cpp" />
     <ClCompile Include="Stars.cpp" />
     <ClCompile Include="Title.cpp" />
